--- a/src/styles/search-input.css
+++ b/src/styles/search-input.css
@@ -24,7 +24,7 @@
 .search-help {
   display: inline-block;
   margin-left: 4px;
-  margin-top: -6px;
+  margin-top: -9px;
   font-size: 20px;
   color: #666;
   opacity: 0.6;
